Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twsmainlbingress
  namespace: tws-three-tier
  annotations:
    # Removed rewrite-target
spec:
  ingressClassName: nginx
  rules:
    - host: backend.amanpathakdevops.study
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: twsapibackendservice
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twsfrontend-service
                port:
                  number: 80
